fixed the layout issue in some 1024 ipad on login

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -257,7 +257,7 @@
 /* Targeted iPad Pro landscape adjustments without conflicting with main breakpoints */
 @media (min-width: 1024px) and (max-width: 1180px) and (orientation: landscape) {
   .login-box-content {
-    flex-direction: row;
+    width: 100%;
   }
 }
 
